--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Legacy Loader</title>
+  <title>Legacy Launcher</title>
   <link rel="icon" type="image/png" href="root/assets/icon.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -16,6 +16,8 @@
       <button onclick="window.open('https://dl.llaun.ch/legacy/installer', '_blank')"><span>Windows</span></button>
       <button onclick="window.open('https://dl.llaun.ch/legacy/dmg', '_blank')"><span>MacOS</span></button>
       <button onclick="window.open('https://dl.llaun.ch/legacy/deb', '_blank')"><span>Debian</span></button>
+      <button onclick="window.open('https://dl.flathub.org/repo/appstream/ch.tlaun.TL.flatpakref', '_blank')"><span>Flatpak</span></button>
+      <button onclick="window.open('https://llaun.ch/portable', '_blank')"><span>Portable</span></button>
       <button onclick="window.open('https://llaun.ch/jar', '_blank')"><span>Java</span></button>
     </div>
   </div>
